# wispr-tauri-voice-to-text

./: .gitignore  00_START_HERE.md  ARCHITECTURE.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  FILE_LISTING.md  FINAL_SUMMARY.md  GETTING_STARTED.md  PROJECT_STATUS.txt  PROJECT_SUMMARY.md  README.md  index.html  package-lock.json  package.json  setup.bat  setup.sh  vite.config.js
.github/: copilot-instructions.md
src/: App.jsx  index.css  tauri.js
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: RecordingPanel.jsx  TranscriptionPanel.jsx
src/utils/: tauri.js
